--- a/source/themes/custom/crescenttool/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/full--product.scss
@@ -626,3 +626,12 @@ $tabs-border-width-active: rem(5px);
     }
   }
 }
+// code for table format for product perview
+.specification {
+  tr {
+    td {
+      vertical-align: top;
+      padding: 0px 2px;
+    }
+  }
+}
