--- a/docroot/themes/custom/crescenttool/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/crescenttool/templates/node/node--product--full.html.twig
@@ -211,10 +211,17 @@
               {% autoescape false %}
                 {% if field_product_specifications | length > 0 %}
                   {% for key,specification in field_product_specifications %}
-                    <div class="field__item">{{key}} :
-                      {% for items in specification %}
-                        <span>{{ (':' in items) ? '<br/>' ~ items ~ ''  : '' ~ items ~ '<br/>' }}</span>
-                      {% endfor %}
+                    <div class="field__item">
+                      <table class="specification">
+                          <td> 
+                              {{key}} :
+                          </td>
+                           <td>
+                             {% for items in specification %}
+                                <span>{{'' ~ items ~ '<br/>' }}</span>
+                             {% endfor %}
+                           </td>
+                      </table>
                     </div>
                   {% endfor %}
                 {% endif %}
