--- a/source/themes/custom/apextoolgroup/styles/base/_variables.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_variables.scss
@@ -16,6 +16,10 @@ $silver: #A5A5A5;
 // Button hover colors.
 $pale-aqua: #D9E8FC;
 $fulvous: #E38A15;
+$light-silver: #D9D9D9;
+$gainsboro: #DCDCDC;
+$westchester-grey: #787878;
+$beluga: #F1F1F1;
 
 /****** fonts ******/
 $nacelle: 'Nacelle', sans-serif;
@@ -28,6 +32,7 @@ $h4: 20px;
 $h5: 18px;
 $h6: 16px;
 $p: 16px;
+$font-size-12: 12px;
 
 /****** font weight ******/
 $bold: bold;
