--- a/docroot/themes/custom/apextoolgroup/templates/node/node--news--full.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/node/node--news--full.html.twig
@@ -73,14 +73,14 @@
     not node.isPublished() ? 'is-unpublished',
     view_mode ? view_mode|clean_class,
     'clearfix',
-    'container',
+    'container mt-50 mb-50 news-detail',
   ]
 %}
 
 <div class="hero-banner">
   {{ content.field_banner_image }}
 
-{% if node.label or content.field_short_description.0 %}
+{% if node.label or content.field_sub_heading.0 %}
   <div class="hero-banner__caption">
     <div class="container">
       <h1 class="hero-banner__title">
@@ -88,15 +88,30 @@
       </h1>
 
       <div class="hero-banner__description">
-        {{ content.field_short_description.0 }}
+        {{ content.field_sub_heading.0 }}
       </div>
     </div>
   </div>
   {% endif %}
 </div>
 
-<div {{attributes.addClass(classes)}}>
-  <div class="market-details">
-    {{ content.body }}
+
+<article{{ attributes.addClass(classes) }}>
+  <div class="news-detail__top">
+    <div class="left-block">
+      <div class="date-formate">
+        <span class="date">{{ content.field_date['#items'].value | date('F j') }}</span>
+        <span class="year">{{ content.field_date['#items'].value | date('Y') }}</span>
+      </div>
+      {% if content.field_news_release_document.0 is not empty %}
+        <div class="download-pdf"><a href={{ news_release_document_path }} download>{{ 'Download Document' | t}}</a></div>
+      {% endif %}
+    </div>
+    {% if content.field_media is not empty %}
+      <div class="logo-image">{{ content.field_media }}</div>
+    {% endif %}
   </div>
-</div>
+  {% if content.body is not empty %}
+    {{ content.body.0 }}
+  {% endif %}
+</article>
