--- a/docroot/themes/custom/apextoolgroup/templates/node/node--page--full.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/node/node--page--full.html.twig
@@ -73,9 +73,10 @@
     not node.isPublished() ? 'is-unpublished',
     view_mode ? view_mode|clean_class,
     'clearfix',
+    'container',
   ]
 %}
 
-<div class="container">
+<div {{attributes.addClass(classes)}}>
   {{ content }}
 </div>
