--- a/source/themes/custom/apextoolgroup/styles/components/_news.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_news.scss
@@ -153,3 +153,40 @@
     }
   }
 }
+
+// News Detail page.
+.news-detail {
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+
+  .date-formate {
+    .date {
+      display: block;
+      font-size: 30px;
+      line-height: 40px;
+      font-weight: $light;
+      color: $celtic-blue;
+    }
+
+    .year {
+      display: block;
+      color: $aluminium;
+      font-size: 18px;
+      font-weight: $normal;
+      line-height: 1;
+      margin-bottom: 10px;
+    }
+  }
+
+  .download-pdf {
+    a {
+      font-size: $p;
+      line-height: 20px;
+      color: $celtic-blue;
+      text-decoration: underline;
+    }
+  }
+}
