--- a/source/themes/custom/apextoolgroup/styles/base/_tabs.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_tabs.scss
@@ -7,7 +7,7 @@ ul.tabs {
 
     li {
       position: relative;
-      margin: 0;
+      margin: 0 0 16px;
 
       &.is-active {
         &::before {
