--- a/docroot/themes/custom/apextoolgroup/templates/node/node--news--full.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/node/node--news--full.html.twig
@@ -77,9 +77,7 @@
   ]
 %}
 
-<div class="hero-banner">
-  {{ content.field_banner_image }}
-
+<div class="hero-banner" style="background-image: url('{{ image_path }}');">
 {% if node.label or content.field_sub_heading.0 %}
   <div class="hero-banner__caption">
     <div class="container">
