--- a/source/themes/custom/apextoolgroup/styles/components/_header.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_header.scss
@@ -217,7 +217,8 @@
           right: 0;
           width: 20px;
           height: 10px;
-          top: 20px;
+          top: 7px;
+          padding: 20px;
         }
       }
     }
