--- a/source/themes/custom/apextoolgroup/styles/components/_homepage.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_homepage.scss
@@ -233,15 +233,17 @@
   padding: 65px 0;
 
   p {
-    font-size: 18px;
+    font-size: 24px;
     margin-top: 0;
     margin-bottom: 40px;
+    line-height: 33.6px;
   }
 
   .btn-secondary-white {
     margin: auto;
     max-width: fit-content;
-    padding: 16px 20px;
+    padding: 24px;
+    font-size: 24px;
   }
 }
 
@@ -268,7 +270,6 @@
 
     img {
       width: 100%;
-      height: 206px;
       object-fit: cover;
     }
 
@@ -277,6 +278,7 @@
     }
 
     .date {
+      font-size: 14px;
       margin-top: 16px;
     }
 
