--- a/docroot/themes/custom/apextoolgroup/templates/block/block--fixed-block-content--homepage-cta-block.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/block/block--fixed-block-content--homepage-cta-block.html.twig
@@ -42,8 +42,8 @@
   {% block content %}
     <div class="container">
       <div class="row">
-        <div class="col-12 col-md-7 col-lg-5">
-          {% if content.field_title %}<h1>{{ content.field_title.0 }}<h1>{% endif %}
+        <div class="col-12 col-md-8 col-lg-5">
+          {% if content.field_title %}<h1>{{ content.field_title.0 }}</h1>{% endif %}
           {{ content.body.0 }}
           <a href="{{ content.field_link.0['#url'] }}" class="btn-primary">{{ content.field_link.0['#title'] }}</a>
         </div>
