Revert "APS-80 issues-resolved (pull request #397)"

--- a/source/themes/custom/sata/styles/libraries/paragraph/full--content-callout.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--content-callout.scss
@@ -71,6 +71,7 @@
   &.component-content-callout__color-theme--emerald {
     .component-content-callout__content {
       @include media('>=lg-plus') {
+        background-color: $primary-emerald;
         padding: rem(20px 30px 30px);
         max-width: rem(570px) !important;
       }
@@ -131,6 +132,7 @@
         font-family: $font-brand;
         font-size: rem(52px);
         line-height: 1;
+        margin-bottom: rem(20px);
         position: relative;
         z-index: 5;
 
