--- a/source/themes/custom/sata/styles/libraries/paragraph/full--content.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--content.scss
@@ -142,6 +142,7 @@
             display: block;
             max-height: 100%;
             min-height: 100%;
+            object-fit: cover;
           }
         }
       }
