Apex-257: Investor connect landing page styling.

--- a/docroot/themes/custom/apextoolgroup/templates/paragraphs/paragraph--inventor-image-and-text.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/paragraphs/paragraph--inventor-image-and-text.html.twig
@@ -48,11 +48,15 @@
   ]
 %}
 {% block paragraph %}
-  <div{{ attributes.addClass(classes) }}>
-    {% block content %}
-   <div{{ attributes.addClass(classes) }}>
-    <div>{{ content.field_content }}</div>
-
-    {% endblock %}
+<div{{ attributes.addClass(classes) }}>
+  {% block content %}
+  <div class="content">
+    {{ content.field_content }}
   </div>
+
+  <div class="image">
+    {{content.field_media_item}}
+  </div>
+  {% endblock %}
+</div>
 {% endblock paragraph %}
