--- a/source/themes/custom/apextoolgroup/styles/base/_typography.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_typography.scss
@@ -108,7 +108,7 @@ a {
     font-weight: 700;
   }
 
-  > ul {
+  ul {
     padding: 0;
     margin: 0 0 18px 15px;
 
@@ -116,19 +116,19 @@ a {
       margin: 0 0 16px 15px;
     }
 
-    > li {
+    li {
       padding: 0;
       margin: 0 0 10px;
       list-style: disc;
 
-      > ul {
+      ul {
         margin: 18px 0 18px 25px;
 
         @media only screen and(max-width: $tablet) {
           margin: 16px 0 16px 20px;
         }
 
-        > li {
+        li {
           padding: 0;
           margin: 0 0 10px;
           list-style: circle;
