--- a/source/themes/custom/apextoolgroup/styles/base/_typography.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_typography.scss
@@ -177,6 +177,15 @@ a {
       }
     }
   }
+
+  ol {
+    list-style: decimal;
+    margin: 0 0 18px 15px;
+
+    li {
+      padding-left: 5px;
+    }
+  }
 }
 
 ol,
@@ -212,7 +221,18 @@ input[type='checkbox'] {
 label {
   font-size: $p;
   color: $black;
-  font-weight: 400;
   line-height: 22.4px;
+  font-weight: $normal;
   font-family: $nacelle;
+}
+
+input,
+textarea {
+  &::placeholder {
+    font-size: $p;
+    color: $black;
+    line-height: 22.4px;
+    font-weight: $normal;
+    font-family: $nacelle;
+  }
 }
