APEX-465: Sonaqube fixes

--- a/docroot/themes/custom/apextoolgroup/templates/views/views-view-fields--brands--homepage_brand_block.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/views/views-view-fields--brands--homepage_brand_block.html.twig
@@ -1,4 +1,4 @@
 {% set view_node = fields.field_read_more.content|render|trim|striptags %}
-<a href="{{view_node}}" class="home-brands__card" target="_blank">
+<a href="{{view_node}}" class="home-brands__card" target="_blank" rel="noopener">
   {{ fields.field_listing_image.content }}
 </a>
