--- a/docroot/themes/custom/apextoolgroup/templates/navigation/menu--main.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/navigation/menu--main.html.twig
@@ -1,3 +1,24 @@
+
+{#
+/**
+ * @file
+ * Theme override to display a menu.
+ *
+ * Available variables:
+ * - menu_name: The machine name of the menu.
+ * - items: A nested list of menu items. Each menu item contains:
+ *   - attributes: HTML attributes for the menu item.
+ *   - below: The menu item child items.
+ *   - title: The menu link title.
+ *   - url: The menu link url, instance of \Drupal\Core\Url
+ *   - localized_options: Menu link localized options.
+ *   - is_expanded: TRUE if the link has visible children within the current
+ *     menu tree.
+ *   - is_collapsed: TRUE if the link has children within the current menu tree
+ *     that are not currently visible.
+ *   - in_active_trail: TRUE if the link is in the active trail.
+ */
+#}
 {% import _self as menus %}
 
 {#
@@ -5,79 +26,57 @@
   @see http://twig.sensiolabs.org/doc/tags/macro.html
 #}
 {{ menus.menu_links(items, attributes, 0) }}
-
 {% macro menu_links(items, attributes, menu_level) %}
+
   {% import _self as menus %}
+  {% if items %}
     {% if menu_level == 0 %}
-      <ul class="navbar-nav">
-          {% if items %}
-            {% for item in items %}
-              {% if item.below %}
-                {%
-                    set classes = [
-                      'nav-link angle-down drop-toggle pt-nav-link' ,
-                      item.in_active_trail ? 'active',
-                    ]
-                  %}
-                <li class="nav-item dropdown">
-                  <a {{ item.attributes.addClass(classes)}} href="{{ item.url }}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                   {{ item.title }}
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
-                  </ul>
-                </li>
-              {% else %}
-                {%
-                    set classes = [
-                      'nav-link pt-nav-link' ,
-                      item.in_active_trail ? 'active',
-                    ]
-                  %}
-                <li class="nav-item">
-                  <a {{ item.attributes.addClass(classes)}} href="{{ item.url }}">{{ item.title }}</a>
-                </li>
-              {% endif %}
-            {% endfor %}
-          {% endif %}
-        </ul>
-    {% elseif menu_level == 1 %}
-      {% if items %}
-          {% for item in items %}
-            {% if item.below %}
-              <li class="dropdown-second">
-              <a class="dropdown-item angle-right drop-toggle" href="{{ item.url }}">{{ item.title }}</a>
-                    <ul class="dropdown-menu">
-                      {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
-                    </ul>
-              </li>
-            {% else %}
-            <li><a class="dropdown-item" href="{{ item.url }}">{{ item.title }}</a></li>
-            {% endif %}
-          {% endfor %}
-      {% endif %}
-    {% elseif menu_level == 2 %}
-        {% if items %}
-          {% for item in items %}
-            {% if item.below %}
-              <li class="dropdown-third">
-              <a class="dropdown-item angle-right drop-toggle" href="{{ item.url }}">{{ item.title }}</a>
-                    <ul class="dropdown-menu">
-                      {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
-                    </ul>
-              </li>
-            {% else %}
-            <li><a class="dropdown-item" href="{{ item.url }}">{{ item.title }}</a></li>
-            {% endif %}
-          {% endfor %}
-        {% endif %}
-    {% elseif menu_level == 3 %}
-        {% if items %}
-          {% for item in items %}
-            <li><a class="dropdown-item" href="{{ item.url }}">{{ item.title }}</a></li>
-          {% endfor %}
-        {% endif %}
+      <ul{{ attributes.addClass('nav navbar-nav') }} id="main-Menu">
+    {% else %}
+      <ul class="dropdown-menu">
     {% endif %}
+
+    {% if menu_level == 0 %}
+
+      {% for item in items %}
+        {%
+          set classes = [
+            '',
+            item.is_expanded ? 'dropdown',
+            item.is_collapsed ? 'dropdown',
+            item.in_active_trail ? 'active',
+            'nav-item',
+          ]
+        %}
+        <li{{ item.attributes.addClass(classes) }}>
+          <a class="dropdown-item angle-down" href="{{ item.url }}">{{ item.title }}</a>
+          {% if item.below %}
+            {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
+          {% endif %}
+        </li>
+      {% endfor %}
+
+    {% else %}
+
+      {% for item in items %}
+        {%
+          set classes = [
+            '',
+                item.is_expanded ? 'dropdown-submenu dropdown-second',
+            item.is_collapsed ? 'dropdown',
+            item.in_active_trail ? 'active',
+            'dropdown-item angle-right',
+          ]
+        %}
+        <li{{ item.attributes.addClass(classes) }}>
+          <a class="dropdown-item angle-right" href="{{ item.url }}">{{ item.title }}</a>
+          {% if item.below %}
+            {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
+          {% endif %}
+        </li>
+      {% endfor %}
+      
+    {% endif %}
+    </ul>
+  {% endif %}
 {% endmacro %}
-
-
