APEX-252: Banner path updated

--- a/source/themes/custom/apextoolgroup/styles/components/_homepage.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_homepage.scss
@@ -195,6 +195,9 @@
     width: 100%;
     min-height: 243px;
     margin-bottom: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .view-wrapper {
