APEX-551: About us page.

--- a/source/themes/custom/apextoolgroup/styles/components/_brand-timeline.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_brand-timeline.scss
@@ -277,7 +277,7 @@
       &__desc {
         padding: 16px 10px;
         height: calc(100% - 210px);
-        overflow: scroll;
+        overflow-y: auto;
 
         h6 {
           margin: 0 0 30px;
