--- a/source/themes/custom/apextoolgroup/styles/components/_news.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_news.scss
@@ -180,4 +180,33 @@
       text-decoration: underline;
     }
   }
+
+  ul {
+    padding: 0;
+    margin: 0 0 18px 15px;
+
+    @media only screen and(max-width: $tablet) {
+      margin: 0 0 16px 15px;
+    }
+
+    li {
+      padding: 0;
+      margin: 0 0 10px;
+      list-style: disc;
+
+      ul {
+        margin: 18px 0 18px 25px;
+
+        @media only screen and(max-width: $tablet) {
+          margin: 16px 0 16px 20px;
+        }
+
+        li {
+          padding: 0;
+          margin: 0 0 10px;
+          list-style: circle;
+        }
+      }
+    }
+  }
 }
