--- a/docroot/themes/custom/crescenttool_au/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/crescenttool_au/templates/node/node--product--full.html.twig
@@ -149,6 +149,9 @@
           <div class="product-detail-content-container__rating-container">
             <!--Price Spider Rating widget goes here-->
             <div class="node__buy-now-button ps-widget" ps-sku="{{sku}}"></div>
+            {% if rrp is not null %}
+              <div class="rrp">RRP ${{ rrp }}</div>
+            {% endif%}
           </div>
 
           <div class="product-detail-content-container__social">
