Apex-258: Application form style.

--- a/docroot/themes/custom/apextoolgroup/templates/block/block--fixed-block-content--product-webform-top-section.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/block/block--fixed-block-content--product-webform-top-section.html.twig
@@ -33,6 +33,8 @@
     'atg-product-webform container',
   ]
 %}
+{{ attach_library('apextoolgroup/application-form') }}
+
 <div{{ attributes.addClass(classes) }}>
 {{ title_prefix }}
 {% if content['#block_content'].info.value  %}
