--- a/docroot/themes/custom/apextoolgroup/templates/views/views-view-fields--faq.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/views/views-view-fields--faq.html.twig
@@ -1,9 +1,8 @@
-{{ attach_library('apextoolgroup/faq-listing') }}
 <div class="faq-accordion">
-	<div class="faq-question container">
+	<div class="faq-question">
 			{{ fields.title.content }}
 	</div>
-	<div class="faq-answer container">
-		{{ fields.body.content }}
+	<div class="faq-answer">
+		<p>{{ fields.body.content }}</p>
 	</div>
 </div>
