--- a/source/themes/custom/apextoolgroup/styles/components/_faq-listing.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_faq-listing.scss
@@ -1,21 +1,42 @@
 .faq-listing {
+  margin: 50px 0;
+
   .views-row {
     .faq-accordion {
+      border-bottom: 1px solid $aluminium-dark;
+
       .faq-question {
-        padding: 16px 0;
+        position: relative;
+        padding: 30px 0;
+        font-size: 18px;
         cursor: pointer;
         color: $celtic-blue;
-        border-bottom: 1px solid $aluminium-dark;
+        width: calc(100% - 40px);
+
+        &::after {
+          content: '';
+          background: url('#{$icon-base-path}/arrow-down-responsive.svg') center no-repeat;
+          width: 22px;
+          height: 13px;
+          position: absolute;
+          right: -20px;
+          top: 32px;
+        }
+
+        &.active {
+          &::after {
+            transform: rotate(180deg);
+          }
+        }
       }
 
       .faq-answer {
+        margin-bottom: 30px;
         display: none;
       }
-    }
 
-    &.active {
-      .faq-answer {
-        display: block;
+      p {
+        margin: 0;
       }
     }
   }
