Apex-232: Brand detail page banner add brand link.

--- a/docroot/themes/custom/apextoolgroup/templates/node/node--brands.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/node/node--brands.html.twig
@@ -9,6 +9,16 @@
           {{ node.label }}
         </h1>
         {% endif %}
+        {% if node.field_read_more.0.url %}
+        <div class="hero-banner__description">
+          <p>
+            {{'Production Tools'|t}}
+            <a href="{{node.field_read_more.0.url}}" target="_blank">
+              {{'Visit The Site'|t}}
+            </a>
+          </p>
+        </div>
+        {% endif %}
       </div>
     </div>
   {% endif %}
