Apex-233: Brand page filter alignment issue fix.

--- a/docroot/themes/custom/apextoolgroup/templates/views/views-view--brands-catalog--page.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/views/views-view--brands-catalog--page.html.twig
@@ -75,7 +75,7 @@
   <div class="view-container brands__content">
     <div class="brands__tabs">
       <div class="brands__filter-icon">
-        <img src="{{ base_path ~ directory }}/icons/filter.svg" alt="Filter icon">
+        <img src="/{{ base_path ~ directory }}/icons/filter.svg" alt="Filter icon">
       </div>
 
       {{localtasktabs}}
