--- a/source/themes/custom/apextoolgroup/styles/components/_brands.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_brands.scss
@@ -1,3 +1,11 @@
+.path-brands-faceting {
+  .region-content {
+    .block-local-tasks-block {
+      display: none;
+    }
+  }
+}
+
 .brands {
   display: flex;
   flex-wrap: wrap;
@@ -228,9 +236,13 @@
       flex-direction: row-reverse;
     }
 
-    .block-local-tasks-block {
+    .tabs {
       @media only screen and(max-width: $tablet) {
         width: 100%;
+      }
+
+      .tabs--atg {
+        margin: 0;
       }
     }
   }
@@ -239,12 +251,14 @@
     top: 0;
     width: 32px;
     height: 32px;
+    padding: 4px;
     position: absolute;
+    border: 1px solid $black;
     left: calc(100% - 12px);
     transform: translateX(-100%);
     @media only screen and(max-width: $tablet) {
       position: static;
-      margin: 0 0 16px;
+      margin: 0 0 12px;
       transform: translateX(0);
     }
 
