Apex-233: Brand filter on tablet device close icon issue fix.

--- a/docroot/themes/custom/apextoolgroup/templates/views/views-view--brands-catalog--page.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/views/views-view--brands-catalog--page.html.twig
@@ -56,7 +56,7 @@
   {% if exposed %}
     <div class="view-filters tab-filters brands__sidebar">
       <div class="brands__filter-close-icon">
-        <img src="{{ base_path ~ directory }}/icons/close-black.svg" alt="Filter icon">
+        <img src="/{{ base_path ~ directory }}/icons/close-black.svg" alt="Filter icon">
       </div>
       <div class="brands__sidebar-title">
         Filters
