Apex-241: New site map page styling.

--- a/source/themes/custom/apextoolgroup/styles/base/_typography.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_typography.scss
@@ -189,6 +189,19 @@ a {
   }
 }
 
+.sitemap-item {
+  padding: 16px;
+  background-color: $beluga;
+
+  ul {
+    li {
+      a {
+        text-decoration: none;
+      }
+    }
+  }
+}
+
 ol,
 ul {
   list-style-type: none;
