Apex-241: Site map page add title.

--- a/docroot/themes/custom/apextoolgroup/templates/layout/page--sitemap.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/layout/page--sitemap.html.twig
@@ -104,7 +104,7 @@
       {{ page.help }}
     {% endif %}
   {% else %}
-    <div class="main-contane">
+    <div class="main-contane sitemap">
       <div class="container">
         <div class="text-formatted mt-50 mb-50">
           {{ page.pre_content }}
