--- a/source/themes/custom/apextoolgroup/styles/base/_typography.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_typography.scss
@@ -188,6 +188,12 @@ a {
     }
   }
 }
+.sitemap {
+  .block-page-title-block {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
 
 .sitemap-item {
   padding: 16px;
