Apex-420: login access denied and not found page styling.

--- a/source/themes/custom/apextoolgroup/styles/components/_imports.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_imports.scss
@@ -26,4 +26,6 @@
 'product-webform',
 'application-form',
 'about-us',
-'basic-image-content';
+'basic-image-content',
+'user-login',
+'page-not-found';
