--- a/source/themes/custom/apextoolgroup/styles/components/_news.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_news.scss
@@ -172,6 +172,13 @@
     }
   }
 
+  .logo-image  {
+    img {
+      width: 100px;
+      height: auto;
+    }
+  }
+
   .download-pdf {
     a {
       font-size: $p;
