--- a/source/themes/custom/apextoolgroup/styles/components/_faq-listing.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_faq-listing.scss
@@ -9,6 +9,7 @@
         position: relative;
         padding: 30px 0;
         font-size: 18px;
+        line-height: 22px;
         cursor: pointer;
         color: $celtic-blue;
         width: calc(100% - 40px);
