APEX-244: women in tools

--- a/source/themes/custom/apextoolgroup/styles/components/_header.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_header.scss
@@ -436,6 +436,7 @@
 
     &::placeholder {
       color: $aluminium-dark;
+      font-size: 36px;
     }
     @media only screen and (max-width: $tablet)  {
       font-size: 24px;
