--- a/source/themes/custom/apextoolgroup/styles/components/_basic-image-content.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_basic-image-content.scss
@@ -8,7 +8,7 @@
   font-size: 16px;
 
   @media only screen and (max-width: $tablet-max) {
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
 
   &.left-image {
@@ -35,6 +35,7 @@
     width: 40%;
     @media only screen and (max-width: $tablet-max) {
       width: 100%;
+      margin-bottom: 16px;
 
       img {
         width: 100%;
@@ -47,7 +48,6 @@
     width: 60%;
     @media only screen and (max-width: $tablet-max) {
       width: 100%;
-      margin-bottom: 15px;
     }
 
     p {
@@ -74,6 +74,10 @@
 }
 
 // Womwn in tools.
+.block-fixed-block-contentwomen-in-tools-banner {
+  margin-bottom: 50px;
+}
+
 .image-grid {
   @media only screen and (min-width: $tablet-max) {
     padding: 0;
