Apex-241: Site map page add banner.

--- a/docroot/themes/custom/apextoolgroup/templates/layout/page--sitemap.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/layout/page--sitemap.html.twig
@@ -106,7 +106,7 @@
   {% else %}
     <div class="main-contane sitemap">
       <div class="container">
-        <div class="text-formatted mt-50 mb-50">
+        <div class="text-formatted mb-50">
           {{ page.pre_content }}
           {{ page.content }}
           {{ page.post_content }}
