--- a/source/themes/custom/apextoolgroup/styles/base/_typography.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_typography.scss
@@ -193,6 +193,10 @@ a {
   .block-page-title-block {
     padding-left: 0;
     padding-right: 0;
+
+    .page-title {
+      margin-top: 25px;
+    }
   }
 }
 
