--- a/docroot/themes/custom/atg/templates/nodes/node--article--teaser.html.twig
+++ b/docroot/themes/custom/atg/templates/nodes/node--article--teaser.html.twig
@@ -17,7 +17,10 @@
 	</header>
 
 	<div{{ content_attributes.addClass('teaser-body') }}>
-		{{ content.body }}
+	  <div>
+	    {{ content.body }}
+	    <a href="{{ path('entity.node.canonical', {'node': node.id}) }}">{{ 'Read More'|t }}</a>
+	  </div>
 	</div>
 
 </article>
